feat: adiciona lógica de Garçom e Cozinheiro com notificações e melhorias nos serviços - Implementa serviços GarcomService e CozinheiroService com responsabilidades específicas - Adiciona lógica de notificação entre garçom e cozinheiro para itens prontos e chamados - Cria controle de status para itens do pedido (ex: PENDENTE, EM_PREPARO, PRONTO, ENTREGUE) - Adiciona suporte a múltiplos modos de pagamento (ex: DINHEIRO, CARTAO, PIX) - Refatora serviços existentes para integrar a nova lógica de fluxo entre cozinha e atendimento